--- a/terms.html
+++ b/terms.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 40px auto;
+            margin: 50px auto;
             max-width: 900px;
             line-height: 1.7;
             color: #333;
@@ -26,6 +26,7 @@
         p, li {
             font-size: 1em;
             color: #444;
+            padding: 5px 0;
         }
         a {
             color: #0066cc;
@@ -72,8 +73,9 @@
         <li>Providing an accurate email address at signup (it cannot be changed in the App).</li>
         <li>Maintaining the confidentiality of your login credentials.</li>
         <li>All activities under your account, whether authorized by you or not.</li>
+        <li>Remembering your password. We do not offer in-app password recovery; contact <a href="mailto:playgroundshello@gmail.com">playgroundshello@gmail.com</a> for assistance, subject to our discretion.</li>
     </ul>
-    <p>We are not liable for losses or damages due to your failure to secure your account. Notify us immediately at <a href="mailto:playgroundshello@gmail.com">playgroundshello@gmail.com</a> if you suspect unauthorized access.</p>
+    <p>We are not liable for losses or damages due to your failure to secure your account or remember your password. Notify us immediately at <a href="mailto:playgroundshello@gmail.com">playgroundshello@gmail.com</a> if you suspect unauthorized access.</p>
 
     <h2>4. User Content and Conduct</h2>
     <p>You may create posts, comments, profile content, and opt into attendable events ("User Content"). You are entirely responsible for:</p>
