--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 40px auto;
+            margin: 50px auto;
             max-width: 900px;
             line-height: 1.7;
             color: #333;
@@ -26,6 +26,7 @@
         p, li {
             font-size: 1em;
             color: #444;
+            padding: 5px 0;
         }
         a {
             color: #0066cc;
@@ -82,6 +83,7 @@
         <li><strong>Accurate Email Submission:</strong> Your email is permanent and cannot be changed in the App. Verify its accuracy before signup, as errors cannot be corrected via the App interface.</li>
         <li><strong>Post Location Consent:</strong> You agree to provide post location data for map display, understanding it may be visible to other users. This consent is required to use the App and is confirmed before your first use.</li>
         <li><strong>Account Security:</strong> Protecting your login credentials. We are not liable for unauthorized access due to your negligence (e.g., sharing passwords).</li>
+        <li><strong>Password Recovery:</strong> Password recovery is not available in-app. Email us at <a href="mailto:playgroundshello@gmail.com">playgroundshello@gmail.com</a> for support, and we may require identity verification.</li>
         <li><strong>Deletion Option:</strong> You may delete your account at any time via the Account settings, erasing all associated data we hold, subject to Section 5.</li>
     </ul>
     <p>To request an email correction due to error or obsolescence, contact us at <a href="mailto:playgroundshello@gmail.com">playgroundshello@gmail.com</a>. We will process verified requests within 30 days, but we may deny changes if they compromise account integrity or security.</p>
