--- a/index.html
+++ b/index.html
@@ -1,61 +1,174 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Playgrounds - Discover. Connect. Play.</title>
-  <link rel="stylesheet" href="styles.css" />
+    <title>Playgrounds - Never stop exploring</title>
+    <style>
+        /* General Styles */
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: sans-serif;
+            background-color: #A3BFFA; /* Light blue background */
+        }
+
+        /* Header */
+        .header {
+            background-color: #FFFFFF;
+            padding: 10px 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        .logo {
+            font-weight: bold;
+            font-size: 24px;
+            color: #000000;
+            text-transform: lowercase;
+        }
+        .icons {
+            display: flex;
+            gap: 15px;
+        }
+        .icon {
+            width: 24px;
+            height: 24px;
+            background-color: #000000; /* Placeholder for search/profile icons */
+            border-radius: 50%;
+        }
+
+        /* Hero Section */
+        .hero {
+            text-align: center;
+            padding: 50px 20px;
+            color: #000000;
+        }
+        .heading {
+            font-size: 36px;
+            margin-bottom: 10px;
+        }
+        .subheading {
+            font-size: 18px;
+            margin-bottom: 20px;
+        }
+        .cta-button {
+            background-color: #00C4B4; /* Turquoise */
+            color: #FFFFFF;
+            padding: 12px 24px;
+            border-radius: 50px;
+            text-decoration: none;
+            font-weight: bold;
+            display: inline-block;
+        }
+
+        /* Sidebar */
+        .sidebar {
+            position: fixed;
+            right: 20px;
+            top: 50%;
+            transform: translateY(-50%);
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+        }
+        .sidebar-icon {
+            width: 30px;
+            height: 30px;
+            background-color: #FFFFFF; /* Placeholder for compass/plus/minus icons */
+            border-radius: 50%;
+        }
+
+        /* Events Section */
+        .events {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 20px;
+            padding: 20px;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+        .event-card {
+            background-color: #1A3C34; /* Dark teal */
+            padding: 20px;
+            border-radius: 10px;
+            color: #FFFFFF;
+        }
+        .event-title {
+            font-size: 18px;
+            font-weight: 500;
+            margin-bottom: 10px;
+        }
+        .event-username {
+            font-size: 14px;
+            margin-bottom: 5px;
+        }
+        .event-time {
+            font-size: 12px;
+            font-style: italic;
+        }
+
+        /* Footer */
+        .footer {
+            background-color: #FFFFFF;
+            padding: 10px 20px;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
-  <header>
-    <nav>
-      <div class="logo">Playgrounds</div>
-      <ul>
-        <li><a href="#features">Features</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#download">Download</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <section class="hero">
-    <h1>Discover. Connect. Play.</h1>
-    <p>Your gateway to meet, play, and explore local events and activities.</p>
-    <a href="#download" class="cta-button">Download Now</a>
-  </section>
-
-  <section id="features">
-    <h2>Why Choose Playgrounds?</h2>
-    <div class="feature-grid">
-      <div class="feature">
-        <h3>📍 Find Local Events</h3>
-        <p>Discover nearby events, activities, and meet-ups instantly.</p>
-      </div>
-      <div class="feature">
-        <h3>👥 Connect with Friends</h3>
-        <p>Invite your friends and join activities together.</p>
-      </div>
-      <div class="feature">
-        <h3>🌟 Personalized Recommendations</h3>
-        <p>Get tailored event suggestions based on your interests.</p>
-      </div>
+    <!-- Header -->
+    <div class="header">
+        <div class="logo">playgrounds</div>
+        <div class="icons">
+            <div class="icon"></div> <!-- Search Icon -->
+            <div class="icon"></div> <!-- Profile Icon -->
+        </div>
     </div>
-  </section>
 
-  <section id="about">
-    <h2>About Playgrounds</h2>
-    <p>Playgrounds is designed to bring people together by making it easier to find local experiences. Whether you’re into sports, social events, or community gatherings, we’ve got something for everyone.</p>
-  </section>
+    <!-- Hero Section -->
+    <div class="hero">
+        <h1 class="heading">Discover Events Near You</h1>
+        <p class="subheading">Find festivals, sports, and parties happening now</p>
+        <a href="#" class="cta-button">Get Started</a>
+    </div>
 
-  <section id="download">
-    <h2>Download Playgrounds Today</h2>
-    <a href="#" class="download-btn">Download on the App Store</a>
-    <a href="#" class="download-btn">Get it on Google Play</a>
-  </section>
+    <!-- Sidebar -->
+    <div class="sidebar">
+        <div class="sidebar-icon"></div> <!-- Compass Icon -->
+        <div class="sidebar-icon"></div> <!-- Plus Icon -->
+        <div class="sidebar-icon"></div> <!-- Minus Icon -->
+    </div>
 
-  <footer>
-    <p>&copy; 2025 Fluxe Labs. All rights reserved.</p>
-    <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a>
-  </footer>
+    <!-- Events Section -->
+    <div class="events">
+        <div class="event-card">
+            <div class="event-title">live concerttt</div>
+            <div class="event-username">diego321</div>
+            <div class="event-time">14 ago</div>
+        </div>
+        <div class="event-card">
+            <div class="event-title">in the park</div>
+            <div class="event-username">diego321</div>
+            <div class="event-time">2h ago</div>
+        </div>
+        <div class="event-card">
+            <div class="event-title">Party noww</div>
+            <div class="event-username">diego900</div>
+            <div class="event-time">1h ago</div>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <div class="footer">
+        <div class="icon"></div> <!-- Profile Icon -->
+        <div class="icon"></div> <!-- Plus Icon -->
+        <div class="icon"></div> <!-- Search Icon -->
+    </div>
 </body>
 </html>
