--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <body>
     <!-- Header -->
     <div class="header">
-        <div class="logo">playgrounds</div>
+        <div class="logo">playgrounds™</div>
     </div>
 
     <!-- Hero Section -->
